Defined the load_housing_data

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1,12 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Hands On Machine Learning</h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Loading the housing data</p>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Chicken Wings')"
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import tarfile\n",
+    "import urllib.request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "def load_housing_data():\n",
+    "    tarball_path = Path('datasets/housing.tgz')\n",
+    "    url = 'https://github.com/ageron/data/raw/main/housing.tgz'\n",
+    "    urllib.request.urlretrieve(url, tarball_path)\n",
+    "    with tarfile.open(tarball_path) as housing_tarball:\n",
+    "        housing_tarball.extractall(path='datasets')\n",
+    "    \n",
+    "    return pd.read_csv(Path('datasets/housing/housing.csv'))"
    ]
   }
  ],
@@ -17,7 +51,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
