Loaded up the housing data set

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -28,19 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "\n",
+    "\n",
     "def load_housing_data():\n",
     "    tarball_path = Path('datasets/housing.tgz')\n",
-    "    url = 'https://github.com/ageron/data/raw/main/housing.tgz'\n",
-    "    urllib.request.urlretrieve(url, tarball_path)\n",
-    "    with tarfile.open(tarball_path) as housing_tarball:\n",
-    "        housing_tarball.extractall(path='datasets')\n",
-    "    \n",
-    "    return pd.read_csv(Path('datasets/housing/housing.csv'))"
+    "    if not tarball_path.is_file():\n",
+    "        Path('datasets').mkdir(parents=True, exist_ok=True)\n",
+    "        url = 'https://github.com/ageron/data/raw/main/housing.tgz'\n",
+    "        urllib.request.urlretrieve(url, tarball_path)\n",
+    "\n",
+    "        with tarfile.open(tarball_path) as housing_tarball:\n",
+    "            housing_tarball.extractall(path='datasets')\n",
+    "            \n",
+    "    return pd.read_csv('datasets/housing/housing.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = load_housing_data()"
    ]
   }
  ],
