--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -597,6 +597,32 @@
    "source": [
     "housing.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ocean_proximity\n",
+       "<1H OCEAN     9136\n",
+       "INLAND        6551\n",
+       "NEAR OCEAN    2658\n",
+       "NEAR BAY      2290\n",
+       "ISLAND           5\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.ocean_proximity.value_counts()"
+   ]
   }
  ],
  "metadata": {
