Defined the shuffle_and_split_data function

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -832,6 +832,46 @@
     "housing.hist(bins=50, figsize=(12, 8))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Creating a test set</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shuffle_and_split_data(data, test_ratio):\n",
+    "    \"\"\"The function that is used to split the data into training and testing sets\n",
+    "\n",
+    "    Args:\n",
+    "        data (_type_): SOme data\n",
+    "        test_ratio (_type_): The ratio used to divide the data into training and testing sets\n",
+    "\n",
+    "    Returns:\n",
+    "        Some Data: Some Data\n",
+    "    \"\"\"\n",
+    "    shuffled_indices = np.random.permutation(len(data))\n",
+    "    test_set_size = int(len(data) * test_ratio)\n",
+    "    test_indices = shuffled_indices[:test_set_size]\n",
+    "    train_indices = shuffled_indices[test_set_size:]\n",
+    "    \n",
+    "    return data.iloc[train_indices], data.iloc[test_indices]"
+   ]
   }
  ],
  "metadata": {
