--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -872,6 +872,15 @@
     "    \n",
     "    return data.iloc[train_indices], data.iloc[test_indices]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set, test_set = shuffle_and_split_data(housing, 0.2)"
+   ]
   }
  ],
  "metadata": {
