Defined the is_id_in_test_set and split_data_with_id_hash functions

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -901,6 +901,45 @@
    "source": [
     "len(train_set), len(test_set)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>A more reliable implementation of reproducible data segmentation</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zlib import crc32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_id_in_test_set(identifier, test_ratio):\n",
+    "    return crc32(np.int64(identifier)) < test_ratio * 2**32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_data_with_id_hash(data, test_ratio, id_column):\n",
+    "    ids = data[id_column]\n",
+    "    in_test_set = ids.apply(lambda id_: is_id_in_test_set(id_, test_ratio))\n",
+    "\n",
+    "    return data.loc[~in_test_set], data.loc[in_test_set]"
+   ]
   }
  ],
  "metadata": {
