--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -940,6 +940,16 @@
     "\n",
     "    return data.loc[~in_test_set], data.loc[in_test_set]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_with_id = housing.reset_index()                     # Adds an index column\n",
+    "train_set, test_set = split_data_with_id_hash(housing_with_id, 0.2, \"index\")"
+   ]
   }
  ],
  "metadata": {
