--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -950,6 +950,97 @@
     "housing_with_id = housing.reset_index()                     # Adds an index column\n",
     "train_set, test_set = split_data_with_id_hash(housing_with_id, 0.2, \"index\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Using Scikit Learn for the Train Test data split</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set, test_set = train_test_split(housing, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 16512 entries, 14196 to 15795\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   longitude           16512 non-null  float64\n",
+      " 1   latitude            16512 non-null  float64\n",
+      " 2   housing_median_age  16512 non-null  float64\n",
+      " 3   total_rooms         16512 non-null  float64\n",
+      " 4   total_bedrooms      16349 non-null  float64\n",
+      " 5   population          16512 non-null  float64\n",
+      " 6   households          16512 non-null  float64\n",
+      " 7   median_income       16512 non-null  float64\n",
+      " 8   median_house_value  16512 non-null  float64\n",
+      " 9   ocean_proximity     16512 non-null  object \n",
+      "dtypes: float64(9), object(1)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 4128 entries, 20046 to 3665\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   longitude           4128 non-null   float64\n",
+      " 1   latitude            4128 non-null   float64\n",
+      " 2   housing_median_age  4128 non-null   float64\n",
+      " 3   total_rooms         4128 non-null   float64\n",
+      " 4   total_bedrooms      4084 non-null   float64\n",
+      " 5   population          4128 non-null   float64\n",
+      " 6   households          4128 non-null   float64\n",
+      " 7   median_income       4128 non-null   float64\n",
+      " 8   median_house_value  4128 non-null   float64\n",
+      " 9   ocean_proximity     4128 non-null   object \n",
+      "dtypes: float64(9), object(1)\n",
+      "memory usage: 354.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_set.info()"
+   ]
   }
  ],
  "metadata": {
