--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1327,6 +1327,38 @@
     "plt.ylabel('No. Of Districts')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Code to perform some splits on the a dataset</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitter = StratifiedShuffleSplit(n_splits=10, test_size=0.2, random_state=42)\n",
+    "\n",
+    "strat_splits = []\n",
+    "\n",
+    "for train_index, test_index in splitter.split(housing, housing['income_cat']):\n",
+    "    strat_train_set_n = housing.iloc[train_index]\n",
+    "    strat_test_set_n = housing.iloc[test_index]\n",
+    "    strat_splits.append([strat_train_set_n, strat_test_set_n])"
+   ]
   }
  ],
  "metadata": {
