Data splitting shenanigans

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,6 +1358,22 @@
     "    strat_train_set_n = housing.iloc[train_index]\n",
     "    strat_test_set_n = housing.iloc[test_index]\n",
     "    strat_splits.append([strat_train_set_n, strat_test_set_n])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Using the first split for now</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strat_train_set, strat_test_set = strat_splits[0]"
    ]
   }
  ],
