Stratification in the strat_test_set

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1375,6 +1375,52 @@
    "source": [
     "strat_train_set, strat_test_set = strat_splits[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Using Train Test Split to perform data stratification</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strat_train_set, strat_test_set = train_test_split(housing, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    stratify=housing.income_cat, \n",
+    "                                                    random_state=42\n",
+    "                                                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income_cat\n",
+       "1    0.039971\n",
+       "2    0.318798\n",
+       "3    0.350533\n",
+       "4    0.176357\n",
+       "5    0.114341\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strat_test_set.income_cat.value_counts().sort_index() / len(strat_test_set)"
+   ]
   }
  ],
  "metadata": {
