Stratification in the entire set

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1421,6 +1421,32 @@
    "source": [
     "strat_test_set.income_cat.value_counts().sort_index() / len(strat_test_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "income_cat\n",
+       "1    0.039826\n",
+       "2    0.318847\n",
+       "3    0.350581\n",
+       "4    0.176308\n",
+       "5    0.114438\n",
+       "Name: count, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing.income_cat.value_counts().sort_index() / len(housing)"
+   ]
   }
  ],
  "metadata": {
