--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1447,6 +1447,23 @@
    "source": [
     "housing.income_cat.value_counts().sort_index() / len(housing)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Dropping the Income Cat Column from the housing data frame</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for set_ in (strat_train_set, strat_test_set):\n",
+    "    set_.drop('income_cat', axis=1, inplace=True)"
+   ]
   }
  ],
  "metadata": {
