Loaded up the correlation matrix for the housing_df dataframe's numeric columns

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -1809,6 +1809,283 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Looking for correlations (The standard correlation coefficient AKA Pearsons)</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_cols = housing_df.select_dtypes(include=np.number).columns.tolist()\n",
+    "categorical_cols = housing_df.select_dtypes('object').columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['longitude',\n",
+       " 'latitude',\n",
+       " 'housing_median_age',\n",
+       " 'total_rooms',\n",
+       " 'total_bedrooms',\n",
+       " 'population',\n",
+       " 'households',\n",
+       " 'median_income',\n",
+       " 'median_house_value']"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ocean_proximity']"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorical_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_matrix = housing_df[numeric_cols].corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>longitude</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.924213</td>\n",
+       "      <td>-0.102937</td>\n",
+       "      <td>0.044558</td>\n",
+       "      <td>0.068210</td>\n",
+       "      <td>0.104236</td>\n",
+       "      <td>0.054261</td>\n",
+       "      <td>-0.016542</td>\n",
+       "      <td>-0.050859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>latitude</th>\n",
+       "      <td>-0.924213</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.005692</td>\n",
+       "      <td>-0.036753</td>\n",
+       "      <td>-0.066391</td>\n",
+       "      <td>-0.115677</td>\n",
+       "      <td>-0.071604</td>\n",
+       "      <td>-0.078137</td>\n",
+       "      <td>-0.139584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <td>-0.102937</td>\n",
+       "      <td>0.005692</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.361710</td>\n",
+       "      <td>-0.317978</td>\n",
+       "      <td>-0.301906</td>\n",
+       "      <td>-0.300075</td>\n",
+       "      <td>-0.127043</td>\n",
+       "      <td>0.102175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rooms</th>\n",
+       "      <td>0.044558</td>\n",
+       "      <td>-0.036753</td>\n",
+       "      <td>-0.361710</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.930076</td>\n",
+       "      <td>0.863967</td>\n",
+       "      <td>0.916143</td>\n",
+       "      <td>0.197720</td>\n",
+       "      <td>0.137455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <td>0.068210</td>\n",
+       "      <td>-0.066391</td>\n",
+       "      <td>-0.317978</td>\n",
+       "      <td>0.930076</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.886200</td>\n",
+       "      <td>0.978822</td>\n",
+       "      <td>-0.006038</td>\n",
+       "      <td>0.054635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>population</th>\n",
+       "      <td>0.104236</td>\n",
+       "      <td>-0.115677</td>\n",
+       "      <td>-0.301906</td>\n",
+       "      <td>0.863967</td>\n",
+       "      <td>0.886200</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.916237</td>\n",
+       "      <td>0.004282</td>\n",
+       "      <td>-0.020153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>households</th>\n",
+       "      <td>0.054261</td>\n",
+       "      <td>-0.071604</td>\n",
+       "      <td>-0.300075</td>\n",
+       "      <td>0.916143</td>\n",
+       "      <td>0.978822</td>\n",
+       "      <td>0.916237</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.013637</td>\n",
+       "      <td>0.071426</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_income</th>\n",
+       "      <td>-0.016542</td>\n",
+       "      <td>-0.078137</td>\n",
+       "      <td>-0.127043</td>\n",
+       "      <td>0.197720</td>\n",
+       "      <td>-0.006038</td>\n",
+       "      <td>0.004282</td>\n",
+       "      <td>0.013637</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.688380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_house_value</th>\n",
+       "      <td>-0.050859</td>\n",
+       "      <td>-0.139584</td>\n",
+       "      <td>0.102175</td>\n",
+       "      <td>0.137455</td>\n",
+       "      <td>0.054635</td>\n",
+       "      <td>-0.020153</td>\n",
+       "      <td>0.071426</td>\n",
+       "      <td>0.688380</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    longitude  latitude  housing_median_age  total_rooms  \\\n",
+       "longitude            1.000000 -0.924213           -0.102937     0.044558   \n",
+       "latitude            -0.924213  1.000000            0.005692    -0.036753   \n",
+       "housing_median_age  -0.102937  0.005692            1.000000    -0.361710   \n",
+       "total_rooms          0.044558 -0.036753           -0.361710     1.000000   \n",
+       "total_bedrooms       0.068210 -0.066391           -0.317978     0.930076   \n",
+       "population           0.104236 -0.115677           -0.301906     0.863967   \n",
+       "households           0.054261 -0.071604           -0.300075     0.916143   \n",
+       "median_income       -0.016542 -0.078137           -0.127043     0.197720   \n",
+       "median_house_value  -0.050859 -0.139584            0.102175     0.137455   \n",
+       "\n",
+       "                    total_bedrooms  population  households  median_income  \\\n",
+       "longitude                 0.068210    0.104236    0.054261      -0.016542   \n",
+       "latitude                 -0.066391   -0.115677   -0.071604      -0.078137   \n",
+       "housing_median_age       -0.317978   -0.301906   -0.300075      -0.127043   \n",
+       "total_rooms               0.930076    0.863967    0.916143       0.197720   \n",
+       "total_bedrooms            1.000000    0.886200    0.978822      -0.006038   \n",
+       "population                0.886200    1.000000    0.916237       0.004282   \n",
+       "households                0.978822    0.916237    1.000000       0.013637   \n",
+       "median_income            -0.006038    0.004282    0.013637       1.000000   \n",
+       "median_house_value        0.054635   -0.020153    0.071426       0.688380   \n",
+       "\n",
+       "                    median_house_value  \n",
+       "longitude                    -0.050859  \n",
+       "latitude                     -0.139584  \n",
+       "housing_median_age            0.102175  \n",
+       "total_rooms                   0.137455  \n",
+       "total_bedrooms                0.054635  \n",
+       "population                   -0.020153  \n",
+       "households                    0.071426  \n",
+       "median_income                 0.688380  \n",
+       "median_house_value            1.000000  "
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix"
+   ]
   }
  ],
  "metadata": {
