Showing how different columns correlate with the median house value

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2086,6 +2086,42 @@
    "source": [
     "corr_matrix"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Looking at how each attribute correlates with the median house value</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median_house_value    1.000000\n",
+       "median_income         0.688380\n",
+       "total_rooms           0.137455\n",
+       "housing_median_age    0.102175\n",
+       "households            0.071426\n",
+       "total_bedrooms        0.054635\n",
+       "population           -0.020153\n",
+       "longitude            -0.050859\n",
+       "latitude             -0.139584\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix.median_house_value.sort_values(ascending=False)"
+   ]
   }
  ],
  "metadata": {
