Imported the scatter matrix functiom

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2122,6 +2122,15 @@
    "source": [
     "corr_matrix.median_house_value.sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.plotting import scatter_matrix"
+   ]
   }
  ],
  "metadata": {
