Added some more columns to the housing_df dataframe

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2190,6 +2190,31 @@
    "source": [
     "housing.plot(kind='scatter', x='median_income', y= 'median_house_value', alpha=0.1, grid=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>The line at the top is the price cap for the data</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>An experiment with attribute combinations</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_df['rooms_per_house'] = housing_df.total_rooms / housing_df.households\n",
+    "housing_df['bedrooms_ratio'] = housing_df.total_bedrooms / housing_df.total_rooms\n",
+    "housing_df['people_per_house'] = housing_df.population / housing_df.households"
+   ]
   }
  ],
  "metadata": {
