Showing a correlation table for the modified dataframe

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2207,13 +2207,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "housing_df['rooms_per_house'] = housing_df.total_rooms / housing_df.households\n",
     "housing_df['bedrooms_ratio'] = housing_df.total_bedrooms / housing_df.total_rooms\n",
     "housing_df['people_per_house'] = housing_df.population / housing_df.households"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_matrix = housing_df.select_dtypes(include=np.number).corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>rooms_per_house</th>\n",
+       "      <th>bedrooms_ratio</th>\n",
+       "      <th>people_per_house</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>longitude</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.924213</td>\n",
+       "      <td>-0.102937</td>\n",
+       "      <td>0.044558</td>\n",
+       "      <td>0.068210</td>\n",
+       "      <td>0.104236</td>\n",
+       "      <td>0.054261</td>\n",
+       "      <td>-0.016542</td>\n",
+       "      <td>-0.050859</td>\n",
+       "      <td>-0.027899</td>\n",
+       "      <td>0.087802</td>\n",
+       "      <td>0.024587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>latitude</th>\n",
+       "      <td>-0.924213</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.005692</td>\n",
+       "      <td>-0.036753</td>\n",
+       "      <td>-0.066391</td>\n",
+       "      <td>-0.115677</td>\n",
+       "      <td>-0.071604</td>\n",
+       "      <td>-0.078137</td>\n",
+       "      <td>-0.139584</td>\n",
+       "      <td>0.108037</td>\n",
+       "      <td>-0.108871</td>\n",
+       "      <td>-0.026457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <td>-0.102937</td>\n",
+       "      <td>0.005692</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.361710</td>\n",
+       "      <td>-0.317978</td>\n",
+       "      <td>-0.301906</td>\n",
+       "      <td>-0.300075</td>\n",
+       "      <td>-0.127043</td>\n",
+       "      <td>0.102175</td>\n",
+       "      <td>-0.153900</td>\n",
+       "      <td>0.139119</td>\n",
+       "      <td>0.012771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_rooms</th>\n",
+       "      <td>0.044558</td>\n",
+       "      <td>-0.036753</td>\n",
+       "      <td>-0.361710</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.930076</td>\n",
+       "      <td>0.863967</td>\n",
+       "      <td>0.916143</td>\n",
+       "      <td>0.197720</td>\n",
+       "      <td>0.137455</td>\n",
+       "      <td>0.128631</td>\n",
+       "      <td>-0.183273</td>\n",
+       "      <td>-0.037702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <td>0.068210</td>\n",
+       "      <td>-0.066391</td>\n",
+       "      <td>-0.317978</td>\n",
+       "      <td>0.930076</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.886200</td>\n",
+       "      <td>0.978822</td>\n",
+       "      <td>-0.006038</td>\n",
+       "      <td>0.054635</td>\n",
+       "      <td>0.001569</td>\n",
+       "      <td>0.089931</td>\n",
+       "      <td>-0.045017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>population</th>\n",
+       "      <td>0.104236</td>\n",
+       "      <td>-0.115677</td>\n",
+       "      <td>-0.301906</td>\n",
+       "      <td>0.863967</td>\n",
+       "      <td>0.886200</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.916237</td>\n",
+       "      <td>0.004282</td>\n",
+       "      <td>-0.020153</td>\n",
+       "      <td>-0.076603</td>\n",
+       "      <td>0.042698</td>\n",
+       "      <td>0.085204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>households</th>\n",
+       "      <td>0.054261</td>\n",
+       "      <td>-0.071604</td>\n",
+       "      <td>-0.300075</td>\n",
+       "      <td>0.916143</td>\n",
+       "      <td>0.978822</td>\n",
+       "      <td>0.916237</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.013637</td>\n",
+       "      <td>0.071426</td>\n",
+       "      <td>-0.082242</td>\n",
+       "      <td>0.072046</td>\n",
+       "      <td>-0.042452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_income</th>\n",
+       "      <td>-0.016542</td>\n",
+       "      <td>-0.078137</td>\n",
+       "      <td>-0.127043</td>\n",
+       "      <td>0.197720</td>\n",
+       "      <td>-0.006038</td>\n",
+       "      <td>0.004282</td>\n",
+       "      <td>0.013637</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.688380</td>\n",
+       "      <td>0.314316</td>\n",
+       "      <td>-0.619958</td>\n",
+       "      <td>-0.006662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median_house_value</th>\n",
+       "      <td>-0.050859</td>\n",
+       "      <td>-0.139584</td>\n",
+       "      <td>0.102175</td>\n",
+       "      <td>0.137455</td>\n",
+       "      <td>0.054635</td>\n",
+       "      <td>-0.020153</td>\n",
+       "      <td>0.071426</td>\n",
+       "      <td>0.688380</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.143663</td>\n",
+       "      <td>-0.256397</td>\n",
+       "      <td>-0.038224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rooms_per_house</th>\n",
+       "      <td>-0.027899</td>\n",
+       "      <td>0.108037</td>\n",
+       "      <td>-0.153900</td>\n",
+       "      <td>0.128631</td>\n",
+       "      <td>0.001569</td>\n",
+       "      <td>-0.076603</td>\n",
+       "      <td>-0.082242</td>\n",
+       "      <td>0.314316</td>\n",
+       "      <td>0.143663</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.402221</td>\n",
+       "      <td>0.003868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bedrooms_ratio</th>\n",
+       "      <td>0.087802</td>\n",
+       "      <td>-0.108871</td>\n",
+       "      <td>0.139119</td>\n",
+       "      <td>-0.183273</td>\n",
+       "      <td>0.089931</td>\n",
+       "      <td>0.042698</td>\n",
+       "      <td>0.072046</td>\n",
+       "      <td>-0.619958</td>\n",
+       "      <td>-0.256397</td>\n",
+       "      <td>-0.402221</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.007122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>people_per_house</th>\n",
+       "      <td>0.024587</td>\n",
+       "      <td>-0.026457</td>\n",
+       "      <td>0.012771</td>\n",
+       "      <td>-0.037702</td>\n",
+       "      <td>-0.045017</td>\n",
+       "      <td>0.085204</td>\n",
+       "      <td>-0.042452</td>\n",
+       "      <td>-0.006662</td>\n",
+       "      <td>-0.038224</td>\n",
+       "      <td>0.003868</td>\n",
+       "      <td>-0.007122</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    longitude  latitude  housing_median_age  total_rooms  \\\n",
+       "longitude            1.000000 -0.924213           -0.102937     0.044558   \n",
+       "latitude            -0.924213  1.000000            0.005692    -0.036753   \n",
+       "housing_median_age  -0.102937  0.005692            1.000000    -0.361710   \n",
+       "total_rooms          0.044558 -0.036753           -0.361710     1.000000   \n",
+       "total_bedrooms       0.068210 -0.066391           -0.317978     0.930076   \n",
+       "population           0.104236 -0.115677           -0.301906     0.863967   \n",
+       "households           0.054261 -0.071604           -0.300075     0.916143   \n",
+       "median_income       -0.016542 -0.078137           -0.127043     0.197720   \n",
+       "median_house_value  -0.050859 -0.139584            0.102175     0.137455   \n",
+       "rooms_per_house     -0.027899  0.108037           -0.153900     0.128631   \n",
+       "bedrooms_ratio       0.087802 -0.108871            0.139119    -0.183273   \n",
+       "people_per_house     0.024587 -0.026457            0.012771    -0.037702   \n",
+       "\n",
+       "                    total_bedrooms  population  households  median_income  \\\n",
+       "longitude                 0.068210    0.104236    0.054261      -0.016542   \n",
+       "latitude                 -0.066391   -0.115677   -0.071604      -0.078137   \n",
+       "housing_median_age       -0.317978   -0.301906   -0.300075      -0.127043   \n",
+       "total_rooms               0.930076    0.863967    0.916143       0.197720   \n",
+       "total_bedrooms            1.000000    0.886200    0.978822      -0.006038   \n",
+       "population                0.886200    1.000000    0.916237       0.004282   \n",
+       "households                0.978822    0.916237    1.000000       0.013637   \n",
+       "median_income            -0.006038    0.004282    0.013637       1.000000   \n",
+       "median_house_value        0.054635   -0.020153    0.071426       0.688380   \n",
+       "rooms_per_house           0.001569   -0.076603   -0.082242       0.314316   \n",
+       "bedrooms_ratio            0.089931    0.042698    0.072046      -0.619958   \n",
+       "people_per_house         -0.045017    0.085204   -0.042452      -0.006662   \n",
+       "\n",
+       "                    median_house_value  rooms_per_house  bedrooms_ratio  \\\n",
+       "longitude                    -0.050859        -0.027899        0.087802   \n",
+       "latitude                     -0.139584         0.108037       -0.108871   \n",
+       "housing_median_age            0.102175        -0.153900        0.139119   \n",
+       "total_rooms                   0.137455         0.128631       -0.183273   \n",
+       "total_bedrooms                0.054635         0.001569        0.089931   \n",
+       "population                   -0.020153        -0.076603        0.042698   \n",
+       "households                    0.071426        -0.082242        0.072046   \n",
+       "median_income                 0.688380         0.314316       -0.619958   \n",
+       "median_house_value            1.000000         0.143663       -0.256397   \n",
+       "rooms_per_house               0.143663         1.000000       -0.402221   \n",
+       "bedrooms_ratio               -0.256397        -0.402221        1.000000   \n",
+       "people_per_house             -0.038224         0.003868       -0.007122   \n",
+       "\n",
+       "                    people_per_house  \n",
+       "longitude                   0.024587  \n",
+       "latitude                   -0.026457  \n",
+       "housing_median_age          0.012771  \n",
+       "total_rooms                -0.037702  \n",
+       "total_bedrooms             -0.045017  \n",
+       "population                  0.085204  \n",
+       "households                 -0.042452  \n",
+       "median_income              -0.006662  \n",
+       "median_house_value         -0.038224  \n",
+       "rooms_per_house             0.003868  \n",
+       "bedrooms_ratio             -0.007122  \n",
+       "people_per_house            1.000000  "
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix"
    ]
   }
  ],
