--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2516,6 +2516,57 @@
    "source": [
     "corr_matrix"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Preparing Data for Machine Learning Algorithms</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing = strat_train_set.drop('median_house_value', axis = 1)\n",
+    "housing_labels = strat_train_set['median_house_value'].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5>Cleaning the data</h5>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JohnWork\\AppData\\Local\\Temp\\ipykernel_9008\\1532337275.py:5: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  housing.total_bedrooms.fillna(median, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "housing.dropna(subset=['total_bedrooms'], inplace=True)\n",
+    "housing.drop('total_bedrooms', axis=1)\n",
+    "\n",
+    "median = housing.total_bedrooms.median()\n",
+    "housing.total_bedrooms.fillna(median, inplace=True)"
+   ]
   }
  ],
  "metadata": {
