Created an instance of a simple imputer

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -2564,6 +2564,24 @@
     "median = housing.total_bedrooms.median()\n",
     "housing.total_bedrooms.fillna(median, inplace=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Imputation using a scikit learn function</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy='mean')"
+   ]
   }
  ],
  "metadata": {
