Using imputer statistics to find the mean of the numeric column values

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3018,6 +3018,27 @@
    "source": [
     "imputer.fit(housing_num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-119.573125  ,   35.63774649,   28.57715601, 2639.40279797,\n",
+       "        537.88129845, 1425.51392926,  499.99018895,    3.87042814])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.statistics_"
+   ]
   }
  ],
  "metadata": {
