--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3039,6 +3039,47 @@
    "source": [
     "imputer.statistics_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = imputer.transform(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.2242e+02,  3.7800e+01,  5.2000e+01, ...,  1.5760e+03,\n",
+       "         1.0340e+03,  2.0987e+00],\n",
+       "       [-1.1838e+02,  3.4140e+01,  4.0000e+01, ...,  6.6600e+02,\n",
+       "         3.5700e+02,  6.0876e+00],\n",
+       "       [-1.2198e+02,  3.8360e+01,  3.3000e+01, ...,  5.6200e+02,\n",
+       "         2.0300e+02,  2.4330e+00],\n",
+       "       ...,\n",
+       "       [-1.1706e+02,  3.2590e+01,  1.3000e+01, ...,  2.8140e+03,\n",
+       "         7.6000e+02,  4.0616e+00],\n",
+       "       [-1.1840e+02,  3.4060e+01,  3.7000e+01, ...,  1.7250e+03,\n",
+       "         8.3800e+02,  4.1455e+00],\n",
+       "       [-1.2241e+02,  3.7660e+01,  4.4000e+01, ...,  6.8200e+02,\n",
+       "         2.1200e+02,  3.2833e+00]])"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
   }
  ],
  "metadata": {
