Separated the categorical column for the dataframe

--- a/california_housing_census_data.ipynb
+++ b/california_housing_census_data.ipynb
@@ -3291,6 +3291,127 @@
    "source": [
     "housing_tr"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Handling Text and Categorical Attributes</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_cat = housing.select_dtypes('object')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13096</th>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14973</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3785</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14689</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20507</th>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14207</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13105</th>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19301</th>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19121</th>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19888</th>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16512 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ocean_proximity\n",
+       "13096        NEAR BAY\n",
+       "14973       <1H OCEAN\n",
+       "3785           INLAND\n",
+       "14689          INLAND\n",
+       "20507      NEAR OCEAN\n",
+       "...               ...\n",
+       "14207       <1H OCEAN\n",
+       "13105          INLAND\n",
+       "19301      NEAR OCEAN\n",
+       "19121       <1H OCEAN\n",
+       "19888      NEAR OCEAN\n",
+       "\n",
+       "[16512 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cat"
+   ]
   }
  ],
  "metadata": {
